--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.1",
+    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
